# libjson

./: LICENSE  README.md  combine.py  combiner.py
combined/: CMakeLists.txt  json.c  json.h
combined/testing/: parsefile.c
seperated/include/: chars.h  cstring.h  garbage.h  json.h  lexer.h  parser.h
seperated/src/: chars.c  cstring.c  garbage.c  json.c  lexer.c  parser.c  stack.c
spec/: spec.docx
src_multiple_files/include/: cstring.h  garbage.h  json.h  parser.h  stack.h  stdlibs.h
src_multiple_files/src/: cstring.c  garbage.c  json.c  lexer.c  parser.c  stack.c
src_single_file/: json.c  json.h  json.pc.in
src_single_file/testing/: parsefile  parsefile.c  run_tests_linux.py  run_tests_win.py
